<resources>
    <string name="app_name">Prisma Segitiga</string>
    <string name="prisma_segitiga">PRISMA SEGITIGA</string>
    <string name="panjang_alas">Panjang Alas</string>
    <string name="lebar_alas">Lebar alas</string>
    <string name="tinggi_alas">Tinggi alas</string>
    <string name="hitung">HITUNG</string>
    <string name="hasil">HASIL</string>
    <string name="lengkapi_data">Lengkapi Data</string>
    <string name="reset">RESET</string>
    <string name="kotak">kotak</string>
    <string name="input_nama">MASUKAN NAMA ANDA</string>
    <string name="next">NEXT</string>
    <string name="welcome">WELCOME</string>
    <string name="call_us">Call us</string>
    <string name="web">WEBSITE</string>
    <string name="nyam">Nyam Nyam Nyam</string>
    <string name="for_logo">For Logo</string>
</resources>
