<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prisma_segitiga"
        android:textStyle="bold"
        android:textColor="@color/biru"
        android:textAlignment="center"
        android:textSize="@dimen/defaultTitle"
        android:background="@drawable/title_bg">

    </TextView>

    <TextView
        android:id="@+id/txt_p_alas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/panjang_alas"
        android:textColor="@color/merah"
        android:textSize="@dimen/input"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp">

    </TextView>

    <EditText
        android:id="@+id/p_alas"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:lines="1"
        android:inputType="numberDecimal"
        android:layout_marginBottom="10dp">

    </EditText>

    <TextView
        android:id="@+id/txt_lbr_alas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lebar_alas"
        android:textColor="@color/merah"
        android:textSize="@dimen/input"

        android:layout_marginBottom="10dp">

    </TextView>

    <EditText
        android:id="@+id/lbr_alas"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:lines="1"
        android:inputType="numberDecimal"
        android:layout_marginBottom="10dp">

    </EditText>

    <TextView
        android:id="@+id/txt_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tinggi_alas"
        android:textColor="@color/merah"
        android:textSize="@dimen/input"
        android:layout_marginBottom="10dp">

    </TextView>

    <EditText
        android:id="@+id/t"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:lines="1"
        android:inputType="numberDecimal"
        android:layout_marginBottom="10dp">

    </EditText>

    <Button
        android:id="@+id/btn_hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung"
        />

    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/defaultTitle"
        android:text= "">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="108dp"
            android:layout_height="47dp"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.appcompat.widget.LinearLayoutCompat>
